@@ -441,7 +441,7 @@ public class ExcelArtifactRenderer
       if (valueConstraints.get() instanceof TextValueConstraints) {
         TextValueConstraints textValueConstraints = (TextValueConstraints)valueConstraints.get(); // TODO Use typesafe switch
 
-        List<String> labels = textValueConstraints.literals().stream().map(LiteralValueConstraint::label).collect(Collectors.toList());
+        List<String> labels = textValueConstraints.literals().stream().map(LiteralValueConstraint::label).toList();
 
         for (String label : labels)
           possibleValues.put(label, "");
